# the-rust-programming-language

./: .gitignore  Cargo.toml  LICENSE  README.md
average/: Cargo.toml
average/src/: main.rs
closures-cacher/: Cargo.toml
closures-cacher/src/: main.rs
fahrenheit-celsius/: Cargo.toml
fahrenheit-celsius/src/: input.rs  main.rs
hello-world/: main
minigrep/: Cargo.toml  README.md  output.txt  rustfmt.toml
minigrep/src/: lib.rs  main.rs
nth-fibonacci/: Cargo.toml
nth-fibonacci/src/: main.rs
oop/: Cargo.toml
oop/src/: lib.rs  main.rs
snippets/: futures_try_collect.rs
utils/: Cargo.toml
