# This project is applies the learnings on Rust Object Oriented
# patterns from Listing 17-11
[package]
name = "blog"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
